finaly fix in main